[package]
name = "psu-backend"
version = "0.9.2"
authors = ["Bradley Schofield <ionicisere@gmail.com>"]
edition = "2018"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.3"
rocket = "0.4.8"
dotenv = "0.15.0"
rocket_codegen = "0.4.6"
serde_json = "1.0"
postgres = {version = "0.15.2", features = ["with-chrono"]}
bcrypt = "0.9.0"
nanoid = "0.3.0"
chrono = {version = "0.4.19", features = ["serde"]}
rocket_cors = "0.5.2"
actix-cors = "0.5.4"
actix-web = "3"
multipart = "0.17.1"
futures = "0.3.11"
regex = "1.4.3"
lazy_static = "1.4.0"
tokio = { version = "1.0.2", features = ["rt"] }
rusoto_core = "0.46.0"
rusoto_s3 = "0.46.0"
ureq = { version = "1.5.4", features = ["json"] }
dotenv_codegen = "0.15.0"
base64 = "0.13.0"
stripe-rust = { path = "./deps/stripe-rust" }
serde = {version = "<1.0.118, >=1.0.79", features = ["derive"]}
serde_derive = "<1.0.118, >=1.0.79"
colored = "2.0.0"
zxcvbn = "2"

[dependencies.rocket_contrib]
version = "*"
default-features = false
features = ["json", "postgres_pool"]

[build-dependencies]
built = {version = "0.5.1", features = ["git2"]}